1. 돌발 영상 및 스냅 사진 팝업 작업 2. 대시보드 현황(교차로/횡단보도) 작업 3. 신호정보관리(목록, 상세, 추가, 수정) 화면 및 팝업 작업 4. 교차로 유출입 교통량 화면: 진입방향 기준으로 클래스명 변경.

--- a/base/html/crossroads_flow.html
+++ b/base/html/crossroads_flow.html
@@ -95,8 +95,8 @@
                       <div class="flow-stats-detail">
                         <span class="road-name"><em>도로명1</em></span>
                         <span class="arrow">
-                          <button type="button" class="flow-straight down"><b class="screen-out">직진</b></button>
-                          <button type="button" class="flow-straight up"><b class="screen-out">직진</b></button>
+                          <button type="button" class="flow-straight out"><b class="screen-out">유출</b></button>
+                          <button type="button" class="flow-straight in"><b class="screen-out">유입</b></button>
                         </span>
                         <!-- //arrow -->
                         <span class="num">
@@ -105,9 +105,9 @@
                         </span>
                         <!-- //num -->
                         <span class="arrow">
-                          <button type="button" class="flow-turn left"><b class="screen-out">좌회전</b></button>
-                          <button type="button" class="flow-straight down"><b class="screen-out">직진</b></button>
                           <button type="button" class="flow-turn right"><b class="screen-out">우회전</b></button>
+                          <button type="button" class="flow-straight strt"><b class="screen-out">진입방향</b></button>
+                          <button type="button" class="flow-turn left"><b class="screen-out">좌회전</b></button>
                         </span>
                         <!-- //arrow -->
                         <span class="num">
@@ -122,10 +122,10 @@
                     <!-- //flow-stats-top -->
                     <div class="flow-stats-mid">
                       <div class="flow-stats-detail">
-                        <span class="road-name"><em>도로명3</em></span>
+                        <span class="road-name"><em>도로명2</em></span>
                         <span class="arrow">
-                          <button type="button" class="flow-straight down"><b class="screen-out">직진</b></button>
-                          <button type="button" class="flow-straight up"><b class="screen-out">직진</b></button>
+                          <button type="button" class="flow-straight out"><b class="screen-out">유출</b></button>
+                          <button type="button" class="flow-straight in"><b class="screen-out">유입</b></button>
                         </span>
                         <!-- //arrow -->
                         <span class="num">
@@ -134,9 +134,9 @@
                         </span>
                         <!-- //num -->
                         <span class="arrow">
-                          <button type="button" class="flow-turn left"><b class="screen-out">좌회전</b></button>
-                          <button type="button" class="flow-straight down"><b class="screen-out">직진</b></button>
                           <button type="button" class="flow-turn right"><b class="screen-out">우회전</b></button>
+                          <button type="button" class="flow-straight strt"><b class="screen-out">진입방향</b></button>
+                          <button type="button" class="flow-turn left"><b class="screen-out">좌회전</b></button>
                         </span>
                         <!-- //arrow -->
                         <span class="num">
@@ -148,10 +148,10 @@
                       </div>
                       <!-- //flow-stats-detail -->
                       <div class="flow-stats-detail">
-                        <span class="road-name"><em>도로명2</em></span>
+                        <span class="road-name"><em>도로명3</em></span>
                         <span class="arrow">
-                          <button type="button" class="flow-straight down"><b class="screen-out">직진</b></button>
-                          <button type="button" class="flow-straight up"><b class="screen-out">직진</b></button>
+                          <button type="button" class="flow-straight out"><b class="screen-out">유출</b></button>
+                          <button type="button" class="flow-straight in"><b class="screen-out">유입</b></button>
                         </span>
                         <!-- //arrow -->
                         <span class="num">
@@ -160,9 +160,9 @@
                         </span>
                         <!-- //num -->
                         <span class="arrow">
-                          <button type="button" class="flow-turn left"><b class="screen-out">좌회전</b></button>
-                          <button type="button" class="flow-straight down"><b class="screen-out">직진</b></button>
                           <button type="button" class="flow-turn right"><b class="screen-out">우회전</b></button>
+                          <button type="button" class="flow-straight strt"><b class="screen-out">진입방향</b></button>
+                          <button type="button" class="flow-turn left"><b class="screen-out">좌회전</b></button>
                         </span>
                         <!-- //arrow -->
                         <span class="num">
@@ -178,9 +178,9 @@
                     <div class="flow-stats-bot">
                       <div class="flow-stats-detail reverse">
                         <span class="arrow">
-                          <button type="button" class="flow-turn right"><b class="screen-out">좌회전</b></button>
-                          <button type="button" class="flow-straight up"><b class="screen-out">직진</b></button>
-                          <button type="button" class="flow-turn left"><b class="screen-out">우회전</b></button>
+                          <button type="button" class="flow-turn left"><b class="screen-out">좌회전</b></button>
+                          <button type="button" class="flow-straight strt"><b class="screen-out">진입방향</b></button>
+                          <button type="button" class="flow-turn right"><b class="screen-out">우회전</b></button>
                         </span>
                         <!-- //arrow -->
                         <span class="num">
@@ -190,8 +190,8 @@
                         </span>
                         <!-- //num -->
                         <span class="arrow">
-                          <button type="button" class="flow-straight down"><b class="screen-out">직진</b></button>
-                          <button type="button" class="flow-straight up"><b class="screen-out">직진</b></button>
+                          <button type="button" class="flow-straight in"><b class="screen-out">유입</b></button>
+                          <button type="button" class="flow-straight out"><b class="screen-out">유출</b></button>
                         </span>
                         <!-- //arrow -->
                         <span class="num">
