--- a/base/html/outbreak_snap.html
+++ b/base/html/outbreak_snap.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>돌발 영상 팝업</title>
+    <title>돌발 스냅 팝업</title>
     <script src="/base/js/lib/jquery-3.5.1.min.js"></script>
     <script src="/base/js/lib/jquery-ui.min.js"></script>
     <script src="/base/js/lib/semantic.min.js"></script>
@@ -22,9 +22,7 @@
         </div>
         <!-- //modal-header -->
         <div class="modal-body">
-          <video autoplay loop muted width="100%" height="100%" class="expend-video">
-            <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
-          </video>
+          <img src="/base/images/temp/snapshot.png" alt="돌발 스냅 사진" class="expend-img" />
         </div>
         <!-- //modal-body -->
       </div>
